# OpenMeta

./: .gitignore  .yamllint  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  NOTICE.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  docs-pages.yml  transfer-release-gate.yml
cmake/: Doxyfile.in  FindBrotli.cmake  OpenMetaBuildInfoGenerated.h.in  OpenMetaConfig.cmake.in  OpenMetaDependencies.cmake  OpenMetaInstallDocs.cmake.in  OpenMetaInstallSphinxDocs.cmake.in  OpenMetaInstallWheel.cmake.in  OpenMetaReport.cmake  OpenMetaTargetSettings.cmake
docs/: Doxyfile  api_stability.md  compatibility_dump.md  development.md  doxygen.md  flat_host_mapping.md  host_integration.md  metadata_backend_matrix.md  metadata_support.md  metadata_transfer_plan.md  quick_start.md  requirements.txt  writer_target_contract.md  xmp_sync_policy.md
docs/design/: design_draft.md  draft_exr_canonical_value_encoding.md  exr_canonical_value_encoding.md
docs/research/: draft_openexr_metadata_fit.md  openexr_metadata_fit.md
docs/sphinx/: api.rst  api_stability.rst  build.rst  compatibility_dump.rst  conf.py.in  development.rst  exr_metadata_contract.rst  flat_host_mapping.rst  host_integration.rst  index.rst  interop_api.rst  interop_api_draft.rst  quick_start.rst  security.rst  testing.rst  writer_target_contract.rst  xmp_sync_policy.rst
include/openmeta/: byte_arena.h  container_scan.h  exif_tag_names.h  exif_tiff_decode.h  meta_edit.h  meta_flags.h  meta_key.h  meta_store.h  meta_value.h  simple_meta.h
registry/: SCHEMA.md
registry/blocks/: README.md  blocks.jsonl
registry/exif/: README.md
registry/exif/makernotes/: README.md  apple.jsonl  canon.jsonl  canon_camerainfo.jsonl  canon_colordata.jsonl  canoncustom.jsonl  canonraw.jsonl  casio.jsonl  dji.jsonl  flir.jsonl  fujifilm.jsonl  ge.jsonl  google.jsonl  hp.jsonl  jvc.jsonl  kodak.jsonl  kyoceraraw.jsonl  microsoft.jsonl  minolta.jsonl  minoltaraw.jsonl  motorola.jsonl  nikon.jsonl  nikoncapture.jsonl  nikoncustom.jsonl  nikonsettings.jsonl  nintendo.jsonl  olympus.jsonl  panasonic.jsonl  pentax.jsonl  phaseone.jsonl  reconyx.jsonl  ricoh.jsonl  samsung.jsonl  sanyo.jsonl  sigma.jsonl  sony.jsonl  sonyidc.jsonl
registry/exif/standard/: exififd.jsonl  gpsifd.jsonl  ifd.jsonl  interopifd.jsonl  mpf.jsonl
registry/geotiff/: keys.jsonl
registry/tools/: generate_exif_standard_tag_names_inc.py  generate_geotiff_key_names_inc.py  generate_makernote_tag_names_inc.py
src/include/openmeta/: build_info.h  byte_arena.h  ccm_query.h  compatibility_dump.h  console_format.h  container_payload.h  container_scan.h  dng_sdk_adapter.h  exif_tag_names.h  exif_tiff_decode.h  exr_adapter.h  exr_decode.h  geotiff_key_names.h  icc_decode.h  icc_interpret.h  interop_export.h  iptc_iim_decode.h  jumbf_decode.h  libraw_adapter.h  mapped_file.h  meta_edit.h  meta_flags.h  meta_key.h  meta_store.h  meta_value.h  metadata_capabilities.h  metadata_transfer.h  ocio_adapter.h  oiio_adapter.h  photoshop_irb_decode.h  preview_extract.h  printim_decode.h  resource_policy.h  simple_meta.h  validate.h  xmp_decode.h  xmp_dump.h
src/openmeta/: bmff_fields_decode.cc  bmff_fields_decode_internal.h  build_info.cc  byte_arena.cc  ccm_query.cc  compatibility_dump.cc  console_format.cc  container_payload.cc  container_scan.cc  crw_ciff_decode.cc  crw_ciff_decode_internal.h  dng_sdk_adapter.cc  exif_makernote_canon.cc  exif_makernote_casio.cc  exif_makernote_flir.cc  exif_makernote_fujifilm.cc  exif_makernote_hp.cc  exif_makernote_kodak.cc  exif_makernote_minolta.cc  exif_makernote_nikon.cc  exif_makernote_nintendo.cc  exif_makernote_olympus.cc  exif_makernote_panasonic.cc  exif_makernote_pentax.cc  exif_makernote_reconyx.cc  exif_makernote_ricoh.cc  exif_makernote_samsung.cc  exif_makernote_sony.cc  exif_makernote_tag_names.cc  exif_makernote_tag_names_generated.inc  exif_standard_tag_names_generated.inc  exif_tag_names.cc  exif_tiff_decode.cc  exif_tiff_decode_internal.h  exr_adapter.cc  exr_decode.cc  geotiff_decode.cc  geotiff_decode_internal.h  geotiff_key_names.cc  geotiff_key_names_generated.inc  (+26 more)
src/python/: CMakeLists.txt
src/python/openmeta/: __init__.py
src/python/openmeta/python/: __init__.py  metadump.py  metaread.py  metatransfer.py  metavalidate.py  openmeta_stats.py
src/python/src/: openmeta_module.cc
src/tools/: cli_parse.h  metadump.cc  metaread.cc  metatransfer.cc  metavalidate.cc  thumdump.cc
tests/: bmff_fields_decode_test.cc  c2pa_container_test.cc  ccm_query_test.cc  cli_metaread_safe_text_smoke_test.cmake  cli_metatransfer_smoke_test.cmake  cli_metavalidate_smoke_test.cmake  cli_numeric_parse_smoke_test.cmake  cli_preview_index_test.cmake  cli_release_gate.cmake  compatibility_dump_test.cc  container_payload_test.cc  container_scan_test.cc  crw_ciff_decode_test.cc  dji_app4_decode_test.cc  dng_sdk_adapter_test.cc  exif_tag_names_test.cc  exif_tiff_decode_test.cc  exr_adapter_test.cc  exr_decode_test.cc  flir_fff_decode_test.cc  geotiff_decode_test.cc  icc_decode_test.cc  icc_interpret_test.cc  interop_export_test.cc  iptc_iim_decode_test.cc  jumbf_decode_test.cc  libraw_adapter_test.cc  makernote_decode_test.cc  meta_store_test.cc  metadata_capabilities_test.cc  metadata_transfer_api_test.cc  metatransfer_image_usability_test.cmake  mpf_decode_test.cc  ocio_adapter_test.cc  oiio_adapter_test.cc  photoshop_irb_decode_test.cc  preview_extract_test.cc  printim_decode_test.cc  python_metatransfer_edit_smoke_test.cmake  python_transfer_probe_smoke_test.cmake  (+8 more)
tests/fuzz/: bmff_meta_libfuzzer.cc  container_payload_libfuzzer.cc  container_scan_libfuzzer.cc  exif_tiff_decode_libfuzzer.cc  jumbf_decode_libfuzzer.cc  metastore_libfuzzer.cc  xmp_decode_libfuzzer.cc
tests/fuzz/corpus/: README.md
tests/fuzztest/: metastore_fuzztest.cc
tools/: metaread.cc
